--- a/CustomBush/i18n/fr.json
+++ b/CustomBush/i18n/fr.json
@@ -1,4 +1,6 @@
 {
+  "placeholder.name": "Buisson personnalisé",
+  "placeholder.description": "Ceci est un buisson personnalisé",
   "config.log-amount.name": "Niveau de consignation",
   "config.log-amount.tooltip": "Le niveau d’information de débogage qui sera enregistré dans la console.",
   "config.log-amount.less": "Peu",
